# filepath-debug

./: .gitignore  CHANGELOG.md  cabal.project  filepath-debug.cabal  result.txt
app/: Debuggee.hs  Debugger.hs
